--- a/for-SEEK/index.html
+++ b/for-SEEK/index.html
@@ -16,7 +16,7 @@
 
 <body style="background-color: #000">
 	<div class="YouTubeVideoWrapper">
-		<iframe width="560" height="315" src="https://youtu.be/R0feoIAwdmY?autoplay=1&amp;start=0&amp;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
+		<iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&amp;start=0&amp;rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe>
 	</div>
 </body>
 </html>
