--- a/happy-mothers-day/index.html
+++ b/happy-mothers-day/index.html
@@ -1,6 +1,6 @@
 <html>
 <head><meta http-equiv="Content-Type" content="text/html; charset=us-ascii">
-	<title>My present to SEEK</title>
+	<title>Happy Mother's Day Emily</title>
 	<link rel="stylesheet" type="text/css" href="../css/app.css">
 </head>
 <script async>
