Design leadership updates
Updating my website for the first time since shifting from hands on design to design leadership

--- a/about_vedran.html
+++ b/about_vedran.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 	<head>
-		<title>Vedran Arnautovic | User Experience and Interaction Designer in Melbourne</title>
+		<title>Vedran Arnautovic | Product design and user experience leader in Melbourne</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
@@ -28,8 +28,8 @@
 		<div class="section">
 			<div class="section__content section--top-of-page section--last-in-section">
 				<h1 class="h1-heading">About me</h1>
-					<p>I am a designer with over 10 years’ experience, focusing on user experience design, design systems, usability and interface design.</p>
-					<p>I am currently working as a Lead Product Designer at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://zendesk.com">Zendesk</a>.</p>
+					<p>I am a design leader with over 15 years experience. During my career, I have focused on user experience, product design, design systems, and growing high functioning design teams.</p>
+					<p>I am currently working as a Director of Product Design, building and leading a global team of designers at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://zendesk.com">Zendesk</a>.</p>
 
 			</div>
 		</div>
@@ -49,21 +49,26 @@
 			<div class="sub-section__content">
 					<h2 class="h2-heading">A turning point</h2>
 
-					<p>A career shaping event was an opportunity to spend two years working in the UK and across Europe, studying how medical staff use cancer diagnostic instruments, how our engineers service those instruments and helping both groups improve their processes.</p>
+					<p>A career shaping event was an opportunity to spend two years working with <a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.leica-microsystems.com/">Leica Microsystems</a> in the UK and across Europe, studying how medical staff use cancer diagnostic instruments, how engineers service those instruments and helping both groups improve their processes.</p>
 
 					<p>That was in 2007. That passion for observing how people interact with products and using those observations to design better experiences, lives on in me and is the key reason why I love what I do.</p>
 
 			</div>
 			<div class="sub-section__content">
+					<h2 class="h2-heading">Honing my craft</h2>
+
+					<p>I spent the period between 2010 and 2019 honing my skills as a user experience, interaction, and product designer. I thrived and developed the most during my time at <a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.seek.com.au/">SEEK</a> and <a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.zendesk.com/">Zendesk</a> where I was able to learn from passionate and talented designers, researchers, and design leaders who had the utmost care for making products that improved their customers' lives.</p>
+
+					<p>Working on complex products gave me an appreciation for design systems, and the power they have in making software more consistent, usable, and more efficient to build. I have made contributions to design systems at both <a class ="link link--on-light-bg link--inline" target="_blank" href="https://seek-oss.github.io/braid-design-system/">SEEK</a> and <a class ="link link--on-light-bg link--inline" target="_blank" href="https://garden.zendesk.com/">Zendesk</a>, and have initiated the first “satellite” design system at Zendesk.</p>
+
+			</div>
+			<div class="sub-section__content">
 					<h2 class="h2-heading">My focus today</h2>
 
-					<p>The evolution of my design process and the process of the teams I work with, is a major interest of mine. I am focused on experimenting with, and continuously improving these processes. This has led me to get involved in the development of design systems, including at my current employer, Zendesk.</p>
+					<p>Today, I am focused on nurturing individual designers and growing design teams that deliver customer value through powerful enterprise grade SaaS software.</p>
 
-					<p>I am a big advocate for the use of modern design tools, collaborative design practices and early and continued involvement of users in the design process.</p>
+					<p>Over the last five years, I’ve defined what Admin Experience at Zendesk is, and have built and led a global team of designers responsible for evolving it. My team is responsible for core admin features and a “satellite” design system that enables the design of Zendesk Answer Bot, Messaging, Integrations, Omnichannel Routing, and many other flagship features.</p>
 
-					<p>I love pushing pixels, it suits my detail-oriented side. I can lose myself in Sketch for hours, but I never lose sight of the bigger picture, the audience I’m designing for and the business whose objectives I’m helping meet.</p>
-
-					<p>Sharing knowledge, with people I work with and across the design community, is something I’m passionate about. To this end, I have started a<a class ="link link--on-light-bg link--inline" target="_blank" href=https://www.meetup.com/Sarajevo-UX-Design/> UX design meetup group</a>, presented at <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.slideshare.net/vedranio/presentations">other meetup groups</a> and actively <a class ="link link--on-light-bg link--inline" target="_blank" href="http://medium.com/@vedranio">write</a> about design.</p>
 			</div>
 			<div class="sub-section__content sub-section--last-in-section">
 					<h2 class="h2-heading">About this site</h2>
@@ -111,10 +116,10 @@
 				"name": "Vedran Arnautovic",
 				"address": "Melbourne, Australia",
 				"homeLocation": "Melbourne, Australia",
-				"jobTitle": "Lead Product Designer",
+				"jobTitle": "Director of Product Design",
 				"workLocation": "Melbourne, Australia",
 				"worksFor": "Zendesk",
-				"description": "Designer with over 10 years’ experience, focusing on user experience design, design systems, usability and interface design.",
+				"description": "Designer leader with over 15 years’ experience, focusing on design leadership, product design, user experience design, design systems.",
 				"Nationality": "Australia",
 				"birthPlace": "Sarajevo",
 				"colleague": "https://au.linkedin.com/in/cameronrogers",
@@ -125,7 +130,7 @@
 						"http://www.twitter.com/vedranio",
 						"http://www.instagram.com/vedran_arnautovic/",
 						"http://github.com/vedranio",
-						"http://www.linkedin.com/in/vedran-arnautovic-716a1b128",
+						"http://www.linkedin.com/in/vedran-arnautovic-design",
 						"http://medium.com/@vedranio"
 				]
 			}
