--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
 		<head>
-		<title>Vedran Arnautovic | User Experience and Interaction Designer in Melbourne</title>
+		<title>Vedran Arnautovic | Design leader in Melbourne</title>
 		<link rel="stylesheet" src="http://normalize-css.googlecode.com/svn/trunk/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="css/app.css">
 		<link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700|Roboto' rel='stylesheet' type='text/css'>
@@ -12,22 +12,22 @@
 		<meta http-equiv="public" content="max-age=691200" />
 
 		<!-- Metadata for Google -->
-		<meta name="description" content="Vedran Arnautovic is a user experience and interaction designer based in Melbourne.">
-		<meta name="keywords" content="UX, UX Design, UXD, user experience design, interaction design, designer, prototyping, wireframing, workshop, user research, usability testing, portfolio, resume, cv, online portfolio, IxD, user centred design, vedran arnautovic, vedranio, thatbalduxguy, ux designer, interaction designer">
+		<meta name="description" content="Vedran Arnautovic is a user experience and product design leader based in Melbourne.">
+		<meta name="keywords" content="Design leadership, design strategy, product design, UX, UX Design, UXD, user experience design, interaction design, designer, prototyping, wireframing, workshop, user research, usability testing, portfolio, resume, cv, online portfolio, IxD, user centred design, vedran arnautovic, vedranio, thatbalduxguy, ux designer, interaction designer">
   	<meta name="author" content="Vedran Arnautovic">
 		<meta name="copyright" content="Vedran Arnautovic" />
 
 		<!-- Metadata for Facebook OpenGraph -->
-		<meta property="og:title" content="Vedran Arnautovic | User Experience and Interaction Designer in Melbourne" />
+		<meta property="og:title" content="Vedran Arnautovic | User Experience and Product Design Leader in Melbourne" />
 		<meta property="og:type" content="portfolio website" />
 		<meta property="og:image" content="http://www.vedran.io/resources/images/vedran_speaking_at_meetup.jpg" />
 		<meta property="og:url" content="http://www.vedran.io/" />
-		<meta property="og:description" content="This is a personal portfolio site for Vedran Arnautovic, a user experience and interaction designer based in Melbourne." />
+		<meta property="og:description" content="This is a personal portfolio site for Vedran Arnautovic, a user experience and product design leader based in Melbourne." />
 
 		<!-- Metadata for Twitter Cards -->
 		<meta name="twitter:card" content="summary" />
-		<meta name="twitter:title" content="Vedran Arnautovic | User Experience and Interaction Designer in Melbourne" />
-		<meta name="twitter:description" content="Vedran Arnautovic is a user experience and interaction designer based in Melbourne." />
+		<meta name="twitter:title" content="Vedran Arnautovic | User Experience and Product Design Leader based in Melbourne" />
+		<meta name="twitter:description" content="Vedran Arnautovic is a user experience and product design leader based in Melbourne." />
 		<meta name="twitter:image" content="http://www.vedran.io/resources/images/vedran_speaking_at_meetup.jpg" />
 
 		<script async>
@@ -101,9 +101,8 @@
 				<div class="header__image"></div>
 				<div class="intro">
 					<div class="intro__content">
-						<h1 class="h2-heading">Hello, I’m Vedran.</h1>
-						<p>I am a designer.</p>
-						<p>I design digital products and the way people interact with them.</p>
+						<h1 class="h2-heading">Hello, I’m Vedran</h1>
+						<p>I am a Director of Product Design at Zendesk</p>
 						<a class ="link link__about-me" href="about_vedran.html">More about me</a>
 					</div>
 				</div>
@@ -113,8 +112,9 @@
 		<div class="section section--light section--first-in-section">
 			<div class="section__content">
 				<h2 class="h2-heading">My work</h2>
-					<p class="paragraph__home">A collection of case studies focusing on my design process, as well as side projects I do out of a love of design and a passion for continued learning.</p>
-				<a class ="link link--on-light-bg" href="vedrans_design_work.html">Explore my design work</a>
+					<p class="paragraph__home">My focus has shifted from hands-on design to building and leading design teams.</p>
+					<p class="paragraph__home">Old design case studies are no longer available on this site as they don’t represent the work I do now. You can still see a collection of side projects I created out of a love of design and a passion for continued learning.</p>
+				<a class ="link link--on-light-bg" href="vedrans_design_work.html">Explore my side projects</a>
 			</div>
 		</div>
 		<!-- WRITING -->
@@ -129,15 +129,15 @@
 		<div class="section section--light">
 			<div class="section__content">
 				<h2 class="h2-heading">Design community</h2>
-					<p class="paragraph__home">I am actively involved in local design meetups, have <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">founded one myself</a> and love sharing ideas and learning about other designers’ processes.</p>
-				<a class ="link link--on-light-bg" href="http://www.slideshare.net/vedranio/presentations" target="_blank">Browse my presentations</a>
+					<p class="paragraph__home">I am involved in local design meetups, have <a class ="link link--on-light-bg link--inline" target="_blank" href="http://www.meetup.com/Sarajevo-UX-Design/">founded one myself</a> and love sharing ideas and learning about other designers’ processes.</p>
+				<a class ="link link--on-light-bg" href="https://www.slideshare.net/ThatBaldUXGuy/presentations" target="_blank">Browse my presentations</a>
 			</div>
 		</div>
 		<!-- MY RESUME -->
 		<div class="section section--light section--last-in-section">
 			<div class="section__content">
 				<h2 class="h2-heading">My resumé</h2>
-					<p class="paragraph__home">This site contains examples of my work, showing how I approach design. If you're after a more traditional resumé, you can access it below.</p>
+					<p class="paragraph__home">You can find out about more my experience on <a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-design">LinkedIn</a>, but if you're after a more traditional resumé, you can access it below.</p>
 				<a class ="link link--on-light-bg" href="http://www.vedran.io/resources/documents/Vedran-Arnautovic-Resume.pdf" target="_blank">View my resumé (pdf)</a>
 			</div>
 		</div>
@@ -158,7 +158,7 @@
 				</div>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/vedranio">Twitter</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@vedranio">Medium</a>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-design">LinkedIn</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/vedranio">GitHub</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
 					<script type="text/javascript">copyEmailToClipBoard('.bttn__label','email-label', "bttn__label","hello@vedran.io");</script>
@@ -198,13 +198,17 @@
 		    "name": "Vedran Arnautovic",
 				"address": "Melbourne, Australia",
 				"homeLocation": "Melbourne, Australia",
-				"jobTitle": "Lead Product Designer",
+				"jobTitle": "Director of Product Design",
 				"workLocation": "Melbourne, Australia",
 				"worksFor": "Zendesk",
-				"description": "Designer with over 10 years’ experience, focusing on user experience design, usability and interface design.",
+				"description": "Designer leader with over 15 years’ experience, focusing on design leadership, product design, user experience design, design systems.",
 				"Nationality": "Australia",
 				"birthPlace": "Sarajevo",
 				"colleague": "https://au.linkedin.com/in/cameronrogers",
+				"colleague": "https://www.linkedin.com/in/mkawano/",
+				"colleague": "https://www.linkedin.com/in/nicktarantogrimes/",
+				"colleague": "https://www.linkedin.com/in/rhett-luciani/",
+				"colleague": "https://www.linkedin.com/in/kimlenox/",
 				"alumniOf": "Melbourne University",
 		    "url": "http://vedran.io",
 		    "image": "http://vedran.io/resources/images/vedran_profile_pic.JPG",
@@ -212,7 +216,7 @@
 		        "http://www.twitter.com/vedranio",
 						"http://www.instagram.com/vedran_arnautovic/",
 						"http://github.com/vedranio",
-						"http://www.linkedin.com/in/vedran-arnautovic-716a1b128",
+						"http://www.linkedin.com/in/vedran-arnautovic-design",
 		        "http://medium.com/@vedranio"
 		    ]
 			}
