--- a/side_project--walnut.html
+++ b/side_project--walnut.html
@@ -30,8 +30,8 @@
 		<div class="section section--medium">
 			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">Walnut <span class="nobr">iOS app</span></h1>
-					<p>Walnut allows you to visualise an artwork on your wall, before you buy it.</p>
-					<p><a class="link link--on-light-bg" target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">View on the app store</a></p>
+					<p>Walnut allowed people to visualise an artwork on their wall, before buying it.</p>
+					<p>The app is no longer available on the App Store.</p>
 			</div>
 		</div>
 
@@ -40,7 +40,7 @@
 					<h2 class="h2-heading">About the project</h2>
 
 					<p>I designed, built and marketed Walnut with two friends. We registered it as a business and actually made some decent money from it.</p>
-					<p>That was in 2011. To this date it has the most accurate perspective artwork visulisation of any similar apps.</p>
+					<p>That was in 2011. For a long time, it has the most accurate perspective artwork visulisation of any similar apps. That was until AR kit and similar technology came along.</p>
 					<br>
 
 					<div id="walnut-img-container" class="image--medium placeholder" data-large="resources/images/walnut_example.jpg">
@@ -66,7 +66,7 @@
 			<div class="sub-section__content sub-section--last-in-section">
 					<h2 class="h2-heading">Current status</h2>
 
-					<p>We've disolved the business and retired the website, but the app is still live and you can <a class="link link--on-light-bg link--inline" target="_blank" href="https://itunes.apple.com/au/app/walnut/id560843785?mt=8">download it from the app store</a>.</p>
+					<p>We've disolved the business and retired the website, and the app is no longer available for download.</p>
 			</div>
 			<div class="section section--medium section--nav">
 				<div class="sub-section__content sub-section--last-in-section">
