--- a/vedrans_design_work.html
+++ b/vedrans_design_work.html
@@ -27,9 +27,9 @@
 		<div class="section section--light">
 			<div class="section__content section--top-of-page section--last-in-section section__content--allow-wide">
 				<h1 class="h1-heading">My work</h1>
-					<p>Design has more in common with science and engineering than art. Art is subjective, design is not. Therefore, it is important for designers to be able to articulate their decisions through a coherent design process.</p>
-					<p>Here is a selection of my work, focusing on my design and thought process, rather than just the finished products.</p>
-					<p>If you want to see more of my work, <a class ="link link--on-light-bg link--inline" target="_blank" href="mailto:vedran.arnautovic@gmail.com">email me</a> or connect via <a class ="link link--on-light-bg link--inline" href="https://twitter.com/vedranio">Twitter</a>.</p>
+					<p>Since 2019, my focus has shifted from hands-on design to building and leading design teams.</p>
+					<p>Old design case studies are no longer available on this site as they don’t represent the work I do now. Below is a collection of side projects I created out of a love of design and a passion for continued learning.</p>
+					<p>If you'd like to see my design leadership work, please connect via <a class ="link link--on-light-bg link--inline" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-design/">LinkedIn</a>.</p>
 
 
 			</div>
@@ -40,7 +40,7 @@
 		<!-- lazy load backgrounds -->
 		<script src="js/lazy_background.js"></script>
 
-		<!-- GYMSALES REGISTRATION APP -->
+		<!-- GYMSALES REGISTRATION APP
 		<div id="VisitorRegistrationApp" class="section section--medium">
 
 			<div class="my-work-item my-work-item--with-ipad">
@@ -61,10 +61,11 @@
 				</div>
 			</div>
 		</div>
+		-->
 
 
 
-		<!-- DESIGN SPRINT -->
+		<!-- DESIGN SPRINT
 		<div id="DesignSprintForJoraLocal" class="section section--light">
 			<div class="my-work-item my-work-item--with-desktop-browser">
 					<h2 class="h2-heading">Design sprint <span class="nobr">for JoraLocal</span></h2>
@@ -84,8 +85,9 @@
 
 			</div>
 		</div>
+		-->
 
-		<!-- HIRER VISION -->
+		<!-- HIRER VISION
 		<div id="HirerVision" class="section section--medium section--on-top">
 
 			<div class="my-work-item my-work-item--with-side-image">
@@ -106,8 +108,9 @@
 				</div>
 			</div>
 		</div>
+		-->
 
-		<!-- RUBICON WORKSHOP -->
+		<!-- RUBICON WORKSHOP
 		<div class="section">
 
 			<div id="WorkshopFacilitationAndWireframeDesign" class="my-work-item my-work-item_full-width-image--rubicon">
@@ -120,8 +123,9 @@
 			</div>
 			<script type="text/javascript">lazyLoadBackground('WorkshopFacilitationAndWireframeDesign','my-work-item_full-width-image--rubicon-enhanced','/resources/images/rubicon_design_workshop_2.jpg');</script>
 		</div>
+		-->
 
-		<!-- CREDIT CARD PAYMENT -->
+		<!-- CREDIT CARD PAYMENT
 		<div id="CreditCardPaymentForm" class="section section--light">
 			<div class="my-work-item my-work-item--with-desktop-browser">
 					<h2 class="h2-heading">Credit card <span class="nobr">payment form</span></h2>
@@ -140,8 +144,9 @@
 
 			</div>
 		</div>
+		-->
 
-		<!-- KOLEKTIV.BA USABILITY TESTING -->
+		<!-- KOLEKTIV.BA USABILITY TESTING
 		<div class="section">
 
 			<div id="CoachingAnOrgInUsabilityTesting" class="my-work-item my-work-item_full-width-image--kolektiv">
@@ -154,8 +159,9 @@
 			</div>
 			<script type="text/javascript">lazyLoadBackground('CoachingAnOrgInUsabilityTesting','my-work-item_full-width-image--kolektiv-enhanced','/resources/images/kolektiv_watching_usability_testing_summary_video.jpg');</script>
 		</div>
+		-->
 
-		<!-- GYM SALES SETTINGS -->
+		<!-- GYM SALES SETTINGS
 		<div id="DesignOfASettingsPage" class="section section--light section--on-top">
 			<div class="my-work-item my-work-item--with-desktop-browser">
 					<h2 class="h2-heading">Design of a <span class="nobr">settings page</span></h2>
@@ -174,6 +180,7 @@
 
 			</div>
 		</div>
+		-->
 
 		<!-- SIDE PROJECTS -->
 		<div class="section section--medium section--on-top">
@@ -182,7 +189,7 @@
 
 					<div class="my-work-item__description">
 					<p>Here are some side projects that I worked on in my spare time. I do these things out of a love for design and a desire for constant learning. And because it beats watching TV.</p>
-					<p>Looking back at some of these makes me cringe, but I can’t hide from the things I’ve done – they all make me the designer I am today.</p>
+					<p>Looking back at some of these makes me cringe, but I can’t hide from the things I’ve done – they all make me the design professional I am today.</p>
 					</div>
 
 					<div class="my-work-item--side-projects-container">
@@ -234,7 +241,7 @@
 									<div style="padding-bottom: 100%;"></div>
 								</div>
 								<script type="text/javascript">lazyLoadImage('walnut-img-container','walnut-img-placeholder','Walnut Art App logo – view side project details');</script>
-								<span class="side-project-name"><span>Walnut Art iOS App</span></span>
+								<span class="side-project-name"><span>Walnut Art iOS App (archived)</span></span>
 							</a>
 						</div>
 						<div class="my-work-item__side-project">
@@ -266,7 +273,7 @@
 				</div>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://twitter.com/vedranio">Twitter</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://medium.com/@vedranio">Medium</a>
-					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-716a1b128">LinkedIn</a>
+					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.linkedin.com/in/vedran-arnautovic-design">LinkedIn</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://github.com/vedranio">GitHub</a>
 					<a class ="link link--on-dark-bg link__footer" target="_blank" href="https://www.instagram.com/vedran_arnautovic/">Instagram</a>
 					<script type="text/javascript">copyEmailToClipBoard('.bttn__label','email-label', "bttn__label","hello@vedran.io");</script>
